
package rtidb.api;

message KvPair {
    optional int64 time = 1;
    optional bytes value = 2;
}

message KvList {
    optional string pk = 1;
    repeated KvPair pairs = 2;
}
