package rtidb.pb;


message KvPair{
    optional string pk=1;
    optional string value = 2;
}

message KvPairList{
    repeated KvPair pairs = 1;
}
